tests/type_errors/map_fromlist_fn_error.nos
# expect_error: does not implement Eq
# Map.fromList with non-hashable keys should give compile error
main() = Map.fromList([(x => x, 1)])
